crates/carta/tests/snapshots/golden_e2e__ipynb__commonmark__attachment-order.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="order" class="cell markdown">

Two attachments, referenced out of key order:

![beta](order-beta.png)

![alpha](order-alpha.png)

</div>
