crates/carta/tests/snapshots/golden_e2e__ipynb__commonmark__code-error.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="boom" class="cell code" data-execution_count="3">

``` python
raise Error
```

<div class="output error" data-ename="Err" data-evalue="bad">

    Traceback
    Err: bad

</div>

</div>
