crates/carta/tests/snapshots/golden_e2e__ipynb__commonmark__code-image-metadata.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="sized-plot" class="cell code" data-execution_count="7">

``` python
draw()
```

<div class="output display_data">

<img src="ddd8a63b8957c29356d1015e6040f47158d26c1d.png"
data-needs_background="light" width="320" height="240" />

</div>

</div>
