crates/carta/tests/snapshots/golden_e2e__ipynb__commonmark__code-image-raw-fallback.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="broken-plot" class="cell code" data-execution_count="9">

``` python
draw()
```

<div class="output display_data">

![](05c9998ab9e54c4fb6cbbb6331ec7daf8f4c6f1c.png)

</div>

</div>
