crates/carta/tests/snapshots/golden_e2e__ipynb__commonmark__code-image.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="plot" class="cell code" data-execution_count="5">

``` python
draw()
```

<div class="output display_data">

![](ddd8a63b8957c29356d1015e6040f47158d26c1d.png)

</div>

</div>
