crates/carta/tests/snapshots/golden_e2e__ipynb__commonmark__definition-marker-fold.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="deffold" class="cell markdown">

A line of prose

: not a definition list in this dialect

</div>
